# BCER

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements-all.txt  requirements-base.txt  requirements-inference.txt  requirements-radiomics.txt  requirements-recon.txt
agent/: loop.py  react_failure_reflector.py
assets/: README.md
benchmark/: README.md  __init__.py  benchmark_runner.py  benchmark_suite.template.json  run_example_parallel.sh  score_run.py  smoke.py  summarize_results.py
commands/: dispatcher.py  registry.py  schemas.py  tool_runtime.py
configs/: tasks_registry.json  tool_runtime.yml
core/: parser.py  paths.py  plan_dag.py
demo/: README.md
docs/: DATASETS.md  METRICS.md  TOOLS.md  TOOL_ENV_ANALYSIS.md  cardiac_acdc_classification_rules.md
envs/: base.yml  inference.yml  radiomics.yml  recon.yml
llm/: __init__.py  adapter_gemini_api.py  adapter_openai_api.py  adapter_vllm_server.py
mri_agent_shell/: __init__.py  bootstrap.py  dummy_tools.py  tool_registry.py
runtime/: finalize.py  memory.py  tool_manifest.py
scripts/: export_plan_templates.py  manifest_builder.py  medgemma_openai_server.py  run_cardiac_cine_classification.py  start_vllm_server_apptainer.sh
tools/: __init__.py  alignment_qc.py  arg_models.py  bm3d_denoising.py  brain_glioma_grade_classification.py  brain_tumor_segmentation.py  cardiac_cine_classification.py  cardiac_cine_segmentation.py  catalog.py  compare_nifti_slices.py  dicom_ingest.py  generate_qa_snapshot.py  materialize_registration.py  prostate_distortion_correction.py  rag_search.py  (+10 more)
(+43 files in other folders)
