[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcer-open"
version = "0.1.0"
description = "BCER paper-release MRI workflow agent"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
tui = [
  "textual>=0.44",
]

[project.scripts]
mri-agent = "mri_agent_shell.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "agent*",
  "benchmark*",
  "commands*",
  "config*",
  "configs*",
  "core*",
  "llm*",
  "mri_agent_shell*",
  "runtime*",
  "tools*",
]
